--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -317,7 +317,8 @@
 # Version:      0.39.10
 #    -Added to String: String.fromCharCode (available only if bash4 has at least minor version number 2.
 #                      If bash is older, this function is not available)
-#    -Added to Private: __getAttributeFromObjectByName, __charCode, __getObjectPointer, __objectnameCheck, __rstripFloatZeros
+#    -Added to Private: __getAttributeFromObjectByName, __charCode, __getObjectPointer, __objectnameCheck, 
+#                       __rstripFloatZeros
 #    -Added to File: setuid, setgid, setStickyBit, hasUidBit, hasGidBit
 #    -renamed __posixFilePermissionsConverter to __posixFilePermissionToOctal
 #    -renamed __terminalSupportsColours to __terminalSupportsColors
