renamed __destructor to __destruct
git-svn-id: http://svn.code.sf.net/p/oobash/code@804 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -325,6 +325,7 @@
 #    -renamed __stackOrHelp to __handleErrorMessage
 #    -renamed __visible to __visibilityCheck
 #    -renamed __checkForKeywords to __keywordCheck
+#    -renamed __destructor to __destruct
 #    -removed __stack function
 #    -support for sticky bit, setuid and setgid in __posixFilePermissionToOctal
 #    -Math.random works without bc now
