use of globstar for sourcing own class files
git-svn-id: http://svn.code.sf.net/p/oobash/code@814 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -330,7 +330,8 @@
 #    -support for sticky bit, setuid and setgid in __posixFilePermissionToOctal
 #    -Support for cyrillic characters
 #    -Fixes and small improvements
-
+# Version:      0.39.11
+#    -use of bash globstar for sourcing own class files
 
 #################################################################
 # Features:
