added Math.signum to Math
git-svn-id: http://svn.code.sf.net/p/oobash/code@845 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -331,6 +331,7 @@
 #    -Support for cyrillic characters
 #    -Fixes and small improvements
 # Version:      0.39.11
+#    -Added to Math: Math.signum
 #    -use of bash globstar for sourcing own class files
 #    -Fixes and small improvements
 
