stepper and xtrace option in script skeleton
git-svn-id: http://svn.code.sf.net/p/oobash/code@870 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -333,6 +333,8 @@
 # Version:      0.39.11
 #    -Added to Math: Math.signum, Math.rint, Math.round
 #    -Fixes and small improvements
+# Version:      0.40
+#    -Added stepper and xtrace option in script skeleton (Script.generator)
 
 #################################################################
 # Features:
