small fix for Process threadCount: Sabayon ps:thcount unknown specifier
git-svn-id: http://svn.code.sf.net/p/oobash/code@878 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -335,6 +335,7 @@
 #    -Fixes and small improvements
 # Version:      0.40
 #    -Added stepper and xtrace option in script skeleton (Script.generator)
+#    -Fixes and small improvements
 
 #################################################################
 # Features:
