--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -335,6 +335,7 @@
 #    -Fixes and small improvements
 # Version:      0.40
 #    -Added stepper and xtrace option in script skeleton (Script.generator)
+#    -Alphabetically sorted output of Class.generator
 #    -Fixes and small improvements
 
 #################################################################
