removed dependency: wc
git-svn-id: http://svn.code.sf.net/p/oobash/code@911 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -336,7 +336,8 @@
 # Version:      0.39.12
 #    -Added stepper and xtrace option in script skeleton (Script.generator)
 #    -renamed __fileLength to __size
-#    -Alphabetically sorted output of Class.generator
+#    -removed dependencies: wc
+#    -now the output of Class.generator is alphabetically sorted 
 #    -Fixes and small improvements
 
 #################################################################
