--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -337,7 +337,8 @@
 #    -Added stepper and xtrace option in script skeleton (Script.generator)
 #    -renamed __fileLength to __size
 #    -removed dependencies: wc, pwd
-#    -now the output of Class.generator is alphabetically sorted 
+#    -now the output of Class.generator is alphabetically sorted
+#    -code/help/man is alphabetically sorted
 #    -Fixes and small improvements
 
 #################################################################
