--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -336,7 +336,7 @@
 # Version:      0.39.12
 #    -Added stepper and xtrace option in script skeleton (Script.generator)
 #    -renamed __fileLength to __size
-#    -removed dependencies: wc, pwd
+#    -removed dependencies: wc, pwd, tr, sort
 #    -now the output of Class.generator is alphabetically sorted
 #    -code/help/man is alphabetically sorted
 #    -Fixes and small improvements
