new -S option for the script skeleton
git-svn-id: http://svn.code.sf.net/p/oobash/code@960 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -340,6 +340,12 @@
 #    -now the output of Class.generator is alphabetically sorted
 #    -code/help/man is alphabetically sorted
 #    -Fixes and small improvements
+# Version:      0.39.13
+#    -Stacktrace and String title work in cywin environemnt
+#    -fixed __cleanUp
+#    -added __ps4IndirectionLevelIndentation
+#    -changed PS4 pattern in __setPS4
+#    -new -S option for the script skeleton (code-stepping + functrace)
 
 #################################################################
 # Features:
