changelog script.generator refactoring
git-svn-id: http://svn.code.sf.net/p/oobash/code@972 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -345,7 +345,8 @@
 #    -fixed __cleanUp
 #    -added __ps4IndirectionLevelIndentation
 #    -changed PS4 pattern in __setPS4
-#    -new -S option for the script skeleton (code-stepping + functrace)
+#    -script skeleton (Script.generator) refactoring (new option handling, bugfixing, 
+#     new -S option (code-stepping + functrace)...)
 
 #################################################################
 # Features:
