script skeleton: exit if no options
git-svn-id: http://svn.code.sf.net/p/oobash/code@973 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -346,7 +346,7 @@
 #    -added __ps4IndirectionLevelIndentation
 #    -changed PS4 pattern in __setPS4
 #    -script skeleton (Script.generator) refactoring (new option handling, bugfixing, 
-#     new -S option (code-stepping + functrace)...)
+#     new -S option (code-stepping + functrace), -- = end of options,...)
 
 #################################################################
 # Features:
