first part of THE GREAT REAFACTORING
git-svn-id: http://svn.code.sf.net/p/oobash/code@997 d2084226-57a8-46eb-bcc5-3bd0c7bada0d

--- a/oobash/docs/Changelog.txt
+++ b/oobash/docs/Changelog.txt
@@ -349,3 +349,10 @@
 #    -option autocompletion file for the script skeleton; completion files in hidden scripts/.completions
 #    directory
 #    -Fixes and small improvements
+# Version:      0.39.14
+#    -removed: __handleErrorMessage, __tracebackHeader
+#    -TODO: cleaning code
+#    -TODO: throw + handle zusammenführen
+#    -TODO: random rewrite
+#    -first checks then main code
+
